--- a/angular-editor/package.json
+++ b/angular-editor/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "@kolkov/angular-editor",
+  "name": "@globalvox/angular-editor",
   "version": "1.0.0-beta.5",
   "description": "A simple native WYSIWYG editor for Angular 6+, 7+, 8+. Rich Text editor component for Angular.",
   "author": "Andrey Kolkov <a.kolkov@gmail.com>",
-  "repository": "https://github.com/kolkov/angular-editor",
+  "repository": "https://bitbucket.org/GlobalVox/angular-rich-text-editor",
   "license": "MIT",
   "private": false,
   "bugs": {
-    "url": "https://github.com/kolkov/angular-editor/issues"
+    "url": "https://bitbucket.org/GlobalVox/angular-rich-text-editor/issues"
   },
   "peerDependencies": {
     "@angular/common": ">=8.0.0 <9",
@@ -27,15 +27,15 @@
     "rich",
     "rich text editor"
   ],
-  "main": "bundles/kolkov-angular-editor.umd.js",
-  "module": "fesm5/kolkov-angular-editor.js",
-  "es2015": "fesm2015/kolkov-angular-editor.js",
-  "esm5": "esm5/kolkov-angular-editor.js",
-  "esm2015": "esm2015/kolkov-angular-editor.js",
-  "fesm5": "fesm5/kolkov-angular-editor.js",
-  "fesm2015": "fesm2015/kolkov-angular-editor.js",
-  "typings": "kolkov-angular-editor.d.ts",
-  "metadata": "kolkov-angular-editor.metadata.json",
+  "main": "bundles/globalvox-angular-editor.umd.js",
+  "module": "fesm5/globalvox-angular-editor.js",
+  "es2015": "fesm2015/globalvox-angular-editor.js",
+  "esm5": "esm5/globalvox-angular-editor.js",
+  "esm2015": "esm2015/globalvox-angular-editor.js",
+  "fesm5": "fesm5/globalvox-angular-editor.js",
+  "fesm2015": "fesm2015/globalvox-angular-editor.js",
+  "typings": "globalvox-angular-editor.d.ts",
+  "metadata": "globalvox-angular-editor.metadata.json",
   "sideEffects": false,
   "dependencies": {
     "tslib": "^1.9.0"
